--- a/src/components/AppHeader/AppHeader.css
+++ b/src/components/AppHeader/AppHeader.css
@@ -1,10 +1,23 @@
-.wrapper{
+.wrapper {
   padding: 32px;
   display: flex;
   gap: 32px;
 }
 
-.box{
+.box {
   display: flex;
   flex-direction: column;
+  gap: 10px;
+}
+
+.progressWrapper {
+  display: flex;
+  gap: 5px;
+}
+
+.progress {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background-color: green;
 }
