--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
-.site-layout .site-layout-background {
+.site-layout .site-layout-background .company {
   background: #fff;
+}
+
+.company{
+  background: #fff;
+  padding: 24px;
 }
