--- a/src/App.css
+++ b/src/App.css
@@ -21,3 +21,18 @@
   background: #fff;
   padding: 24px;
 }
+
+.react-resizable {
+  position: relative;
+  background-clip: padding-box;
+}
+
+.react-resizable-handle {
+  position: absolute;
+  right: -5px;
+  bottom: 0;
+  z-index: 1;
+  width: 10px;
+  height: 100%;
+  cursor: col-resize;
+}
