--- a/src/App.css
+++ b/src/App.css
@@ -2,16 +2,12 @@
   background: #fff;
 }
 
-/* .ant-table-cell {
-  white-space: nowrap;
-  min-width: 100px;
-} */
-
 .ant-layout-header {
   position: fixed;
   z-index: 10;
   display: flex;
   height: auto;
+  padding: 0;
   line-height: normal !important;
   background-color: #d9d9d9;
   width: 100%;
@@ -20,6 +16,14 @@
 .company {
   background: #fff;
   padding: 24px;
+}
+
+.ant-table {
+  font-size: 12px;
+}
+
+.ant-table-cell {
+  padding: 2px !important;
 }
 
 .react-resizable {
