--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,11 @@
   font-size: 12px;
 }
 
+.ant-picker-range-separator {
+  display: flex;
+  padding: 0 8px 0 0;
+}
+
 .ant-table-cell {
   padding: 2px !important;
 }
